@@ -19,11 +19,12 @@ public class BooleanType extends BooleanObjectType {
 		super(SqlType.BOOLEAN, new Class<?>[] { boolean.class });
 	}
 
-	/**
-	 * Here for others to subclass.
-	 */
 	protected BooleanType(SqlType sqlType, Class<?>[] classes) {
 		super(sqlType, classes);
+	}
+
+	protected BooleanType(SqlType sqlType) {
+		super(sqlType);
 	}
 
 	@Override
