@@ -26,7 +26,7 @@ public class DateLongType extends BaseDateType {
 	}
 
 	private DateLongType() {
-		super(SqlType.LONG, new Class<?>[0]);
+		super(SqlType.LONG);
 	}
 
 	/**
