@@ -23,10 +23,11 @@
 	* CORE: Added support for Joda DateTime to be able to be a version field.  Thanks much to outofrange.
 	* CORE: Added support for raw queries using the DatabaseResults in the mapper.  Thanks much to nonameplum.
 	* JDBC: Possibly fixed some problems with the Oracle type with better boolean support.  Thanks to 51mon.
-	* JDBC: Added support for UUID database fields for Postgres and MSSQL.  Thanks to tsharp.
+	* JDBC: Added support for UUID database fields for Postgres and MSSQL.  Use dataType = UUID_NATIVE.  Thanks to tsharp.
 	* ANDROID: Fixed the string processing when persisting java.sql.Timestamp classes. Bug #163.
 	* ANDROID: Added initial take on Loader base classes from EgorAnd for newer Android versions.  Thanks much!!
 	* ANDROID: Moved Slf4jLoggingLog from JDBC to CORE so Android users can use it.  Thanks to tonyxiao.
+	* ANDROID: Fixed problem with the maxForeignAutoRefreshLevel config setting.  Thanks to Eric Fung et al.  Bug #194.
 
 4.48: 12/16/2013
 	* CORE: Added support for tracking direct database connection activity with DatabaseConnectionProxy.
